mock-tvm/deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: m-caj-mock-tvm
  labels:
    app: m-caj-mock-tvm
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: m-caj-mock-tvm
      version: v1
  template:
    metadata:
      labels:
        app: m-caj-mock-tvm
        version: v1
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: web-config
            defaultMode: 420
      containers:
        - name: m-caj-mock-tvm
          image: 'quay.io/ske/m-caj-mock-tvm:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: config-volume
              mountPath: /opt/app-root/src/assets/config.json
              subPath: config.json
